leaderboard numbers overlapping fixed

--- a/static/index.css
+++ b/static/index.css
@@ -288,9 +288,9 @@ a.social-button{
 .rows{
   display: inline-block;
 }
-.row .social-button {
+/* .row .social-button {
   margin: 20px auto;
-}
+} */
 
 
 #breathing-button {
@@ -362,3 +362,11 @@ a.social-button{
 i.fa.fa-github::before{
   display: none;
 } */
+
+@media screen and (max-width: 700px){
+  .row {
+    margin: 100px auto ;
+    width: 250px !important;
+    display: flex !important;
+  }
+}
